Rename Gluten Allergy (Celiac) to Gluten Allergy

--- a/profile.html
+++ b/profile.html
@@ -155,7 +155,7 @@
                         <span class="material-icons-round">check</span>
                     </div>
                     <div>
-                        <div class="allergy-name">Gluten Allergy (Celiac)</div>
+                        <div class="allergy-name">Gluten Allergy</div>
                         <div class="allergy-count">13 prohibited ingredients</div>
                     </div>
                 </div>
