--- a/result.html
+++ b/result.html
@@ -146,7 +146,7 @@
                 prohibited: ['egg', 'albumin', 'albumen', 'globulin', 'ovomucoid', 'ovovitellin', 'ovalbumin', 'meringue', 'mayonnaise', 'egg white', 'egg yolk', 'egg powder', 'lysozyme', 'e1105']
             },
             'gluten': {
-                name: 'Gluten Allergy (Celiac)',
+                name: 'Gluten Allergy',
                 prohibited: ['gluten', 'wheat', 'barley', 'rye', 'spelt', 'farina', 'durum', 'semolina', 'triticale', 'malt', 'malt extract', 'malt flavoring', 'brewer\'s yeast']
             },
             'soy': {
