--- a/scan.html
+++ b/scan.html
@@ -303,10 +303,17 @@
                     target: document.querySelector('#interactive'),
                     constraints: {
                         facingMode: "environment",
-                        width: { min: 640 },
-                        height: { min: 480 }
+                        width: { min: 640, ideal: 1280, max: 1920 },
+                        height: { min: 480, ideal: 720, max: 1080 },
+                        aspectRatio: { min: 1, max: 2 },
+                        focusMode: "continuous"
                     }
                 },
+                locator: {
+                    patchSize: "medium",
+                    halfSample: true
+                },
+                numOfWorkers: 2,
                 decoder: {
                     readers: [
                         "ean_reader",
